; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_47080.c_generate_key_material.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_47080.c_generate_key_material.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i8*, i8*, i8*, i32 }

@RC4_KEY_MATERIAL_LENGTH = common dso_local global i32 0, align 4
@RC4_KEY_LENGTH = common dso_local global i32 0, align 4
@CHALLENGE_LENGTH = common dso_local global i32 0, align 4
@MD5_DIGEST_LENGTH = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @generate_key_material(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8, align 1
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  store i8 48, i8* %6, align 1
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i8*, i8** %8, align 8
  store i8* %9, i8** %5, align 8
  store i32 0, i32* %3, align 4
  br label %10

10:                                               ; preds = %41, %1
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @RC4_KEY_MATERIAL_LENGTH, align 4
  %13 = icmp ult i32 %11, %12
  br i1 %13, label %14, label %47

14:                                               ; preds = %10
  %15 = call i32 @MD5_Init(i32* %4)
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i8*, i8** %17, align 8
  %19 = load i32, i32* @RC4_KEY_LENGTH, align 4
  %20 = call i32 @MD5_Update(i32* %4, i8* %18, i32 %19)
  %21 = call i32 @MD5_Update(i32* %4, i8* %6, i32 1)
  %22 = load i8, i8* %6, align 1
  %23 = add i8 %22, 1
  store i8 %23, i8* %6, align 1
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 2
  %26 = load i8*, i8** %25, align 8
  %27 = load i32, i32* @CHALLENGE_LENGTH, align 4
  %28 = call i32 @MD5_Update(i32* %4, i8* %26, i32 %27)
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 3
  %31 = load i8*, i8** %30, align 8
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 4
  %34 = load i32, i32* %33, align 8
  %35 = call i32 @MD5_Update(i32* %4, i8* %31, i32 %34)
  %36 = load i8*, i8** %5, align 8
  %37 = call i32 @MD5_Final(i8* %36, i32* %4)
  %38 = load i64, i64* @MD5_DIGEST_LENGTH, align 8
  %39 = load i8*, i8** %5, align 8
  %40 = getelementptr inbounds i8, i8* %39, i64 %38
  store i8* %40, i8** %5, align 8
  br label %41

41:                                               ; preds = %14
  %42 = load i64, i64* @MD5_DIGEST_LENGTH, align 8
  %43 = load i32, i32* %3, align 4
  %44 = zext i32 %43 to i64
  %45 = add nsw i64 %44, %42
  %46 = trunc i64 %45 to i32
  store i32 %46, i32* %3, align 4
  br label %10

47:                                               ; preds = %10
  ret void
}

declare dso_local i32 @MD5_Init(i32*) #1

declare dso_local i32 @MD5_Update(i32*, i8*, i32) #1

declare dso_local i32 @MD5_Final(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
